--- a/env.example
+++ b/env.example
@@ -7,8 +7,13 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
-FRONTEND_URL=http://localhost:3000
-PLATFORM_FEE_PERCENTAGE=10
+FRONTEND_URL=http://localhost:5173
+VERIFY_EMAIL_REQUIRED=false
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=ShiftBooking <noreply@example.com>
 BASE_HOURLY_RATE=14
 PENALTY_PERCENTAGE=50
 EMPLOYEE_PENALTY_PERCENTAGE=50
