--- a/env.example
+++ b/env.example
@@ -13,7 +13,7 @@ SMTP_HOST=
 SMTP_PORT=587
 SMTP_USER=
 SMTP_PASS=
-SMTP_FROM=ShiftBooking <noreply@example.com>
+SMTP_FROM=Vework <noreply@example.com>
 BASE_HOURLY_RATE=14
 PENALTY_PERCENTAGE=50
 EMPLOYEE_PENALTY_PERCENTAGE=50
