--- a/env.example
+++ b/env.example
@@ -3,12 +3,15 @@ NODE_ENV=development
 MONGODB_URI=mongodb://localhost:27017/shiftbooking
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRE=7d
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
 FRONTEND_URL=http://localhost:5173
+APP_NAME=Vework
 VERIFY_EMAIL_REQUIRED=false
+
+# SendGrid (recommended for production)
+SENDGRID_API_KEY=
+SENDGRID_FROM=Vework <noreply@example.com>
+
+# Legacy SMTP (optional; emails use SendGrid when SENDGRID_API_KEY is set)
 SMTP_HOST=
 SMTP_PORT=587
 SMTP_USER=
