--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "@types/pdfkit": "^0.17.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
